--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "gulp-git": "1.4.0",
     "gulp-prompt": "0.1.2",
     "gulp-run-sequence": "0.3.2",
-    "gulp-tag-version": "1.3.0",
+    "gulp-util": "2.2.20",
     "lodash": "3.10.1",
+    "map-stream": "0.1.0",
     "string": "3.3.1",
     "through2": "2.0.0",
     "yargs": "3.24.0"
