--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "main": "main.js",
   "dependencies": {
     "gulp-bump": "2.1.0",
+    "gulp-json-editor": "2.2.1",
     "gulp-git": "1.7.1",
     "gulp-prompt": "0.2.0",
     "gulp-run-sequence": "0.3.2",
     "gulp-util": "3.0.7",
     "lodash": "4.11.1",
     "map-stream": "0.0.6",
+    "semver": "5.1.0",
     "string": "3.3.1",
     "through2": "2.0.1",
     "yargs": "4.6.0"
