--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "gulp-json-editor": "2.2.1",
     "gulp-git": "2.4.1",
     "gulp-prompt": "0.2.0",
-    "gulp-run-sequence": "0.3.2",
     "gulp-util": "3.0.8",
     "lodash": "4.17.4",
     "map-stream": "0.0.7",
+    "run-sequence": "2.0.0",
     "semver": "5.3.0",
     "string": "3.3.3",
     "through2": "2.0.3",
