--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "version": "1.1.13",
   "main": "main.js",
   "dependencies": {
-    "gulp-json-editor": "2.2.1",
+    "ansi-colors": "^1.0.1",
+    "fancy-log": "^1.3.2",
     "gulp-git": "2.4.1",
+    "gulp-json-editor": "2.2.1",
     "gulp-prompt": "0.2.0",
-    "gulp-util": "3.0.8",
     "lodash": "4.17.4",
     "map-stream": "0.0.7",
     "run-sequence": "2.0.0",
