--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
   "dependencies": {
     "ansi-colors": "^1.0.1",
     "fancy-log": "^1.3.2",
-    "gulp-git": "2.4.1",
-    "gulp-json-editor": "2.2.1",
-    "gulp-prompt": "0.2.0",
-    "lodash": "4.17.4",
-    "map-stream": "0.0.7",
-    "run-sequence": "2.0.0",
-    "semver": "5.3.0",
-    "string": "3.3.3",
-    "yargs": "8.0.2"
+    "gulp-git": "^2.5.0",
+    "gulp-json-editor": "^2.2.1",
+    "gulp-prompt": "^1.0.1",
+    "lodash": "^4.17.4",
+    "map-stream": "^0.0.7",
+    "run-sequence": "^2.2.1",
+    "semver": "^5.4.1",
+    "string": "^3.3.3",
+    "yargs": "^10.0.3"
   },
   "devDependencies": {
-    "gulp": "3.9.1"
+    "gulp": "^3.9.1"
   },
   "license": "MIT"
 }
