--- a/package.json
+++ b/package.json
@@ -6,20 +6,19 @@
   "version": "1.1.14",
   "main": "main.js",
   "dependencies": {
-    "ansi-colors": "^1.0.1",
-    "fancy-log": "^1.3.2",
-    "gulp-git": "^2.5.0",
-    "gulp-json-editor": "^2.2.1",
-    "gulp-prompt": "^1.0.1",
-    "lodash": "^4.17.4",
-    "map-stream": "^0.0.7",
-    "run-sequence": "^2.2.1",
-    "semver": "^5.4.1",
-    "string": "^3.3.3",
-    "yargs": "^10.1.1"
+    "ansi-colors": "1.0.1",
+    "fancy-log": "1.3.2",
+    "gulp-git": "2.5.0",
+    "gulp-json-editor": "2.2.1",
+    "gulp-prompt": "1.0.1",
+    "lodash": "4.17.4",
+    "map-stream": "0.0.7",
+    "semver": "5.4.1",
+    "string": "3.3.3",
+    "yargs": "10.1.1"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "4.0.0"
   },
   "license": "MIT"
 }
