--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "babel-preset-es2015": "6.24.1",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "^2.8.0",
+    "gitbook": "^3.2.3",
     "gulp": "4.0.0",
-    "gulp-eslint": "^4.0.2"
+    "gulp-eslint": "^4.0.2",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-gitbook": "^0.0.2"
   },
   "license": "MIT"
 }
