--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "map-stream": "0.0.7",
     "semver": "5.5.0",
     "string": "3.3.3",
-    "undertaker-registry": "^1.0.1",
+    "undertaker-registry": "1.0.1",
     "yargs": "11.0.0"
   },
   "devDependencies": {
@@ -23,12 +23,12 @@
     "babel-eslint": "8.2.1",
     "babel-preset-es2015": "6.24.1",
     "eslint-plugin-babel": "4.1.2",
-    "eslint-plugin-import": "^2.8.0",
-    "gitbook": "^3.2.3",
+    "eslint-plugin-import": "2.8.0",
+    "gitbook": "3.2.3",
     "gulp": "4.0.0",
-    "gulp-eslint": "^4.0.2",
-    "gulp-gh-pages": "^0.5.4",
-    "gulp-gitbook": "^0.0.2"
+    "gulp-eslint": "4.0.2",
+    "gulp-gh-pages": "0.5.4",
+    "gulp-gitbook": "0.0.2"
   },
   "license": "MIT"
 }
